# simple-file-org

./: README.md  pyproject.toml
src/photo_organizer/: main.py
src/simple_file_org/: main.py
