[project]
name = "photo-organizer"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "pydate>=1.2.0",
    "typer>=0.12.3",
    "pytz>=2024.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/photo_organizer"]
